# axum-prometheus-metrics

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
